<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menuChistes">

    <fragment
        android:id="@+id/menuChistes"
        android:name="com.conadasoft.chistediario.ui.ChistesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_chistes" />

    <fragment
        android:id="@+id/menuFavoritos"
        android:name="com.conadasoft.chistediario.ui.FavoritosFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/menuOtrasApps"
        android:name="com.conadasoft.chistediario.ui.OtrasAppsFragment"
        android:label="@string/title_otras_apps"
        tools:layout="@layout/fragment_otras_apps" />
</navigation>