<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ChistesFragment">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/fondo"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:theme="@style/tarjeta"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="-40dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:id="@+id/frase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:padding="20dp"
                android:gravity="center"
                android:theme="@style/tarjeta"
                tools:text="Chiste diario"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/favoritos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/corazon"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/frase"
                app:layout_constraintEnd_toStartOf="@id/compartir"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/compartir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="#E9C74E"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_compartir"
                android:layout_marginStart="20dp"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frase"
                />

            <TextView
                android:id="@+id/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                tools:text="2/71"
                android:textColor="#777"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/anterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonAnterior"
                app:cornerRadius="50dp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Button
                android:id="@+id/siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonSiguiente"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="80dp"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                ads:adSize="SMART_BANNER"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/siguiente">
            </com.google.android.gms.ads.AdView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/chisteSuperior"
        android:theme="@style/tarjeta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>